docs: update dependencies for jooby.io